--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 
+    <button class="toggleButton" id="twelveHourFormat">Switch to 12 Hour Format</button> 
 
     <!--Just trying sth above this -->
     <div class="timeContainer">
@@ -34,7 +35,7 @@
 
     </div> 
 
-    <input> 
+   
     <script src="logic.js"></script>
 </body>
 </html>
