Added Light and Dark mode Switch button

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
     <button class="toggleButton" id="twelveHourFormat">Switch to 12 Hour Format</button> 
 
+    <button id="toggleTheme">Switch to Dark Mode</button>
+
     <!--Just trying sth above this -->
     <div class="timeContainer">
 
@@ -34,8 +36,7 @@
     </div>
 
     </div> 
-
-   
+    
     <script src="logic.js"></script>
 </body>
 </html>
