Addded quote and color effects when changing themeto dark for the quote .

--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
     </div>
 
     </div> 
+
+    <div class="quoteContainer">
+        <blocquote id="quotePhrase">
+                " Your only limit is your mind. "<br>~Anuprash
+        </blocquote>
+    </div>
+
     
     <script src="logic.js"></script>
 </body>
