Addidng responsive design for mobile dispplay

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <title>Date & Time</title>
 </head>
 <body>
-
+    <div class="flexIcon">
     <button class="toggleButton" id="twelveHourFormat">Switch to 12 Hour Format</button> 
 
     <button id="toggleTheme">Switch to Dark Mode</button>
-
+</div>
     <!--Just trying sth above this -->
     <div class="timeContainer">
 
