Made the website responsive and successfully completed this mini project within short period of time

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
     </div> 
 
     <div class="quoteContainer">
-        <blocquote id="quotePhrase">
+        <blockquote id="quotePhrase">
                 " Your only limit is your mind. "<br>~Anuprash
-        </blocquote>
+        </blockquote>
     </div>
 
     
